syntax = "proto3";

package testdata;

option go_package = "protos/types";

// TestType some test type comment.
message TestType {
    // Value enum value.
    enum Value {
        // NO - no
        NO = 0;
        // YES - yes
        YES = 1;
    }

    // Inner - some inner message.
    // Yet another line.
    message Inner {
        // float64 - float field.
        double float64 = 1;
        // value - value field.
        Value value = 2;
    }

    // str some string field.
    string str = 1;
    int32 int32 = 2;
    uint64 uint64 = 3;
    bool boolean = 4;
    repeated string str_arr = 5;

    // val_map - map field.
    map<string, Inner> val_map = 6;
}

message SimpleType {
    string id = 1;
    int64 count = 2;
    bool enabled = 3;
}